Maintenant il marche

--- a/meetingRoom/angular.json
+++ b/meetingRoom/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "meetingRoom"
+    }
+  },
+  "defaultProject": "meetingRoom",
+  "cli": {
+    "analytics": false
+  }
 }
